# python-ai

.devcontainer/: devcontainer.json
src/: autograd.ipynb  cnn.ipynb  dataloader.ipynb  digit_recognition.ipynb  math_matrix.ipynb  ml_libraries.ipynb  neural-network.ipynb  numpy-lesson.ipynb  numpy_lesson.ipynb  pyproject.toml  pytorch_iris.ipynb  pytorch_lesson.ipynb  sklearn_lesson.ipynb  stock_prediction.ipynb  train_output.ipynb
